# miniverse

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  components.rs  creation.rs  generation.rs  gravity.rs  lib.rs
src/utils/: colors.rs  mod.rs
