[package]
name = "miniverse"
version = "0.1.0"
edition = "2021"
author = "Sebastian Dominguez (joburg1035@yahoo.com)"
description = "A library for simulating n-body gravity interactions"
readme = "README.md"
repository = "https://github.com/SebastianDominguezC/miniverse"
keywords = ["gravity", "simulation"]
categories = ["Simulation", "Science"]
license = "MIT"
exclude = [
    "assets/*",
]

[dependencies]
bevy = { version = "0.7.0" }
rand = "0.8.5"
rand_distr = "0.4.3"
